--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+@import "node_modules/font-awesome/css/font-awesome.min.css";
+
+@import "node_modules/leaflet/dist/leaflet.css";
