--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .container1 {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-size:cover;
     background-image: url("../assets/images/bg2.jpg");
@@ -38,6 +38,12 @@ filter: blur(0.5692583918571472px);
 
  .w-pre-sun1 {
   width: 268px;
+  margin-left: 70px;
+ }
+
+ .w-pre-sun2 {
+  width: 268px;
+  margin-right: 100px;
  }
 
  .w-sunrise {
@@ -87,7 +93,3 @@ filter: blur(0.5692583918571472px);
   opacity: 1; /* Firefox */
 }
 
-// .w-hr {
-//   border: 0.6px;
-//   background: #FFFF;
-// }
